--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   </tr>
   <tr>
     <td>
-      <app-button-component buttonText="AC" extraClass="teal"
+      <app-button-component buttonText="C" extraClass="teal"
         (click)="resetPress()"
       ></app-button-component>
     </td>
@@ -76,7 +76,7 @@
       <app-button-component buttonText="1"
         (click)="numberPress('1')"
       ></app-button-component>
-    </td>
+      </td>
     <td>
       <app-button-component buttonText="2"
         (click)="numberPress('2')"
