Arrow fixed on IE/Edge; Button changed to Divs so they don't focus

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       ></app-button-component>
     </td>
     <td>
-      <app-button-component buttonText="🠄" extraClass="teal"
+      <app-button-component buttonText="←" extraClass="teal"
         (click)="deletePress()"
       ></app-button-component>
     </td>
