--- a/src/app/button/button-component.html
+++ b/src/app/button/button-component.html
@@ -1,1 +1,1 @@
-<button class="fluid ui button {{ extraClass }}">{{ buttonText }}</button>
+<div class="fluid ui button {{ extraClass }}">{{ buttonText }}</div>
