--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,8 +1,11 @@
 <div class="ui fluid left labeled button">
   <div class="ui fluid big label {{ extraClass }}">
-    {{ label }}
+      {{ prefix }}{{ label }}
   </div>
-  <div class="ui icon button {{ extraClass }}" ngxClipboard [cbContent]="clipboardLabel">
+  <div class="ui icon button {{ extraClass }}"
+    data-tooltip="Copy to Clipboard" data-position="right center"
+    ngxClipboard [cbContent]="clipboardLabel"
+  >
     <i class="copy icon"></i>
   </div>
 </div>
