--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <table>
   <tr>
-    <td colSpan=4>
+    <td colSpan="4">
       <app-display extraClass="basic"
         [label]="displayExpression"
         [clipboardLabel]="expression"
@@ -8,7 +8,7 @@
     </td>
   </tr>
   <tr>
-    <td colspan=4>
+    <td colspan="4">
       <app-display extraClass="{{ inError ? 'red' : 'blue' }}" prefix="= "
         [label]="localResult"
         [clipboardLabel]="clipboardValue(result)"
@@ -104,8 +104,8 @@
     </td>
   </tr>
   <tr>
-    <td colspan=2>
-      <app-button-component buttonText="0"
+    <td colspan="2">
+      <app-button-component buttonText="0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
         (click)="numberPress('0')"
       ></app-button-component>
     </td>
@@ -121,22 +121,26 @@
     </td>
   </tr>
   <tr>
-    <td colSpan=4>
+    <td colSpan="4">
       <app-history [historyList]="historyList" [visible]="localStorageService.isSupported && localStorageService.length() > 0"
           (onCopyToDisplay)="copyToDisplay($event)"
         ></app-history>
     </td>
   </tr>
   <tr>
-    <td colSpan=3>
+    <td colSpan="2">
       <span data-tooltip="Expression Calculator: Created in [Angular Cli]" data-position="bottom left">
         <i class="grey info icon"></i>
       </span>
       <span data-tooltip="Results rounded to 5 decimals" data-position="bottom left">
-          <i class="grey help icon"></i>
-        </span>
-        <span data-tooltip="Use with your keyboard to type" data-position="bottom left">
-          <i class="grey lightbulb icon"></i>
-        </span>
-      </td>
+        <i class="grey help icon"></i>
+      </span>
+      <span data-tooltip="Use with your keyboard to type" data-position="bottom left">
+        <i class="grey lightbulb icon"></i>
+      </span>
+    </td>
+    <td colSpan="2" align=right>
+        <font size="1">Built 17/09/2017</font>
+    </td>
+  </tr>
 </table>
