Trying to create an webapp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -129,18 +129,18 @@
   </tr>
   <tr>
     <td colSpan="2">
-      <span data-tooltip="Expression Calculator: Created in [Angular Cli]" data-position="bottom left">
+      <button class="ui mini basic circular icon button" data-tooltip="Expression Calculator in [Angular CLI]" data-position="bottom left">
         <i class="grey info icon"></i>
-      </span>
-      <span data-tooltip="Results rounded to 5 decimals" data-position="bottom left">
+      </button>
+      <button class="ui mini basic circular icon button" data-tooltip="Results rounded to 5 decimals" data-position="bottom left">
         <i class="grey help icon"></i>
-      </span>
-      <span data-tooltip="Use with your keyboard to type" data-position="bottom left">
+      </button>
+      <button class="ui mini basic circular icon button" data-tooltip="Keyboard supported" data-position="bottom left">
         <i class="grey lightbulb icon"></i>
-      </span>
+      </button>
     </td>
-    <td colSpan="2" align=right>
-        <font size="1">Built 17/09/2017</font>
+    <td colSpan="2" align="right" valign="bottom">
+        <font size="1">Built 15/09/2017</font>
     </td>
   </tr>
 </table>
