--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<table>
+<table align="center">
   <tr>
-    <td colSpan="4">
+    <td colSpan="4" style="padding-top:16px;">
       <app-display extraClass="basic"
         [label]="displayExpression"
         [clipboardLabel]="expression"
