--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,146 +1,148 @@
-<table align="center">
-  <tr>
-    <td colSpan="4" style="padding-top:16px;">
-      <app-display extraClass="basic"
-        [label]="displayExpression"
-        [clipboardLabel]="expression"
-      ></app-display>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="4">
-      <app-display extraClass="{{ inError ? 'red' : 'blue' }}" prefix="= "
-        [label]="localResult"
-        [clipboardLabel]="clipboardValue(result)"
-      ></app-display>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <app-button-component buttonText="C" extraClass="basic"
-        (click)="resetPress()"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="(" extraClass="basic"
-        (click)="parensPress('(')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText=")" extraClass="basic"
-        (click)="parensPress(')')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="←" extraClass="basic"
-        (click)="deletePress()"
-      ></app-button-component>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <app-button-component buttonText="7"
-        (click)="numberPress('7')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="8"
-        (click)="numberPress('8')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="9"
-        (click)="numberPress('9')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="÷" extraClass="basic orange"
-        (click)="operatorPress('/')"
-      ></app-button-component>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <app-button-component buttonText="4"
-        (click)="numberPress('4')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="5"
-        (click)="numberPress('5')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="6"
-        (click)="numberPress('6')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="×" extraClass="basic orange"
-        (click)="operatorPress('*')"
-      ></app-button-component>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <app-button-component buttonText="1"
-        (click)="numberPress('1')"
-      ></app-button-component>
+<div class="ui large tex" style="width:100%; max-width:355px" style="padding:10px">
+  <table width="100%">
+    <tr>
+      <td colSpan="4">
+        <app-display extraClass="basic"
+          [label]="displayExpression"
+          [clipboardLabel]="expression"
+        ></app-display>
       </td>
-    <td>
-      <app-button-component buttonText="2"
-        (click)="numberPress('2')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="3"
-        (click)="numberPress('3')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="−" extraClass="basic orange"
-        (click)="operatorPress('-')"
-      ></app-button-component>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      <app-button-component buttonText="0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
-        (click)="numberPress('0')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component [buttonText]="localDecimal"
-        (click)="numberPress('.')"
-      ></app-button-component>
-    </td>
-    <td>
-      <app-button-component buttonText="+" extraClass="basic orange"
-        (click)="operatorPress('+')"
-      ></app-button-component>
-    </td>
-  </tr>
-  <tr>
-    <td colSpan="4">
-      <app-history [historyList]="historyList" [visible]="localStorageService.isSupported && localStorageService.length() > 0"
-          (onCopyToDisplay)="copyToDisplay($event)"
-        ></app-history>
-    </td>
-  </tr>
-  <tr>
-    <td colSpan="2">
-      <button class="ui mini basic circular icon button" data-tooltip="Expression Calculator in [Angular CLI]" data-position="bottom left">
-        <i class="grey info icon"></i>
-      </button>
-      <button class="ui mini basic circular icon button" data-tooltip="Results rounded to 5 decimals" data-position="bottom left">
-        <i class="grey help icon"></i>
-      </button>
-      <button class="ui mini basic circular icon button" data-tooltip="Keyboard supported" data-position="bottom left">
-        <i class="grey lightbulb icon"></i>
-      </button>
-    </td>
-    <td colSpan="2" align="right" valign="bottom">
-        <font size="1">Built 15/09/2017</font>
-    </td>
-  </tr>
-</table>
+    </tr>
+    <tr>
+      <td colspan="4">
+        <app-display extraClass="{{ inError ? 'red' : 'blue' }}" prefix="= "
+          [label]="localResult"
+          [clipboardLabel]="clipboardValue(result)"
+        ></app-display>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <app-button-component buttonText="C" extraClass="basic"
+          (click)="resetPress()"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="(" extraClass="basic"
+          (click)="parensPress('(')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText=")" extraClass="basic"
+          (click)="parensPress(')')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="←" extraClass="basic"
+          (click)="deletePress()"
+        ></app-button-component>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <app-button-component buttonText="7"
+          (click)="numberPress('7')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="8"
+          (click)="numberPress('8')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="9"
+          (click)="numberPress('9')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="÷" extraClass="basic orange"
+          (click)="operatorPress('/')"
+        ></app-button-component>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <app-button-component buttonText="4"
+          (click)="numberPress('4')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="5"
+          (click)="numberPress('5')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="6"
+          (click)="numberPress('6')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="×" extraClass="basic orange"
+          (click)="operatorPress('*')"
+        ></app-button-component>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <app-button-component buttonText="1"
+          (click)="numberPress('1')"
+        ></app-button-component>
+        </td>
+      <td>
+        <app-button-component buttonText="2"
+          (click)="numberPress('2')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="3"
+          (click)="numberPress('3')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="−" extraClass="basic orange"
+          (click)="operatorPress('-')"
+        ></app-button-component>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <app-button-component buttonText="0"
+          (click)="numberPress('0')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component [buttonText]="localDecimal"
+          (click)="numberPress('.')"
+        ></app-button-component>
+      </td>
+      <td>
+        <app-button-component buttonText="+" extraClass="basic orange"
+          (click)="operatorPress('+')"
+        ></app-button-component>
+      </td>
+    </tr>
+    <tr>
+      <td colSpan="4">
+        <app-history [historyList]="historyList" [visible]="localStorageService.isSupported && localStorageService.length() > 0"
+            (onCopyToDisplay)="copyToDisplay($event)"
+          ></app-history>
+      </td>
+    </tr>
+    <tr>
+      <td colSpan="2">
+        <button class="ui mini basic circular icon button" data-tooltip="Expression Calculator in [Angular CLI]" data-position="bottom left">
+          <i class="grey info icon"></i>
+        </button>
+        <button class="ui mini basic circular icon button" data-tooltip="Results rounded to 5 decimals" data-position="bottom left">
+          <i class="grey help icon"></i>
+        </button>
+        <button class="ui mini basic circular icon button" data-tooltip="Keyboard supported" data-position="bottom left">
+          <i class="grey lightbulb icon"></i>
+        </button>
+      </td>
+      <td colSpan="2" align="right" valign="bottom">
+          <font size="1">Built 15/09/2017</font>
+      </td>
+    </tr>
+  </table>
+</div>
