--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,1 @@
-<div class="fluid ui button {{ extraClass }}">{{ buttonText }}</div>
+<div class="fluid ui large button {{ extraClass }}">{{ buttonText }}</div>
