--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,5 +1,5 @@
-<div class="ui fluid left labeled button">
-  <div class="ui fluid big label {{ extraClass }}">{{ label }}</div>
+<div class="ui fluid left labeled button {{ size }}">
+  <div class="ui fluid label {{ extraClass }}">{{ label }}</div>
   <div class="ui icon button {{ extraClass }}"
     ngxClipboard [cbContent]="clipboardLabel"
   >
