--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -6,7 +6,7 @@
   <div *ngFor="let line of historyList"
     (click)="false"
   >
-      <div class="ui mini basic labeled button">
+      <div class="ui tiny basic labeled button">
         <a class="ui right pointing label"
           (click)="copyToDisplay(line.expression);"
         >{{ line.expression }}</a>
