--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,6 +1,6 @@
 <div class="ui fluid left labeled button {{ size }}">
   <div class="ui fluid label {{ extraClass }}">{{ label }}</div>
-  <div class="ui icon button {{ extraClass }}"
+  <div class="ui large icon button {{ extraClass }}"
     ngxClipboard [cbContent]="clipboardLabel"
   >
     <i class="copy icon"></i>
